tests/errors/undefined_symbol.dang
# Test undefined symbol error
let x = undefined_var
